crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R2_plus_R1.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__kiss_ladder__R2_plus_R1.rs:5:24
  |
5 |    let _ = R2::new() + R1::new();
  |                        ^^^^^^^^^ expected `3`, found `1`
  |
  = note: expected struct `Relative<3>`
             found struct `Relative<1>`
